compiler/tests/invalid_programs/dependent_types/ambiguous_overloads.jm
!TypeError

def foo(o)
  puts(o)
end

def foo(o)
  puts(o)
  puts(o)
end

foo("Hello World!")
